Remove injection of WriteOptionsHolder